<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="220dp"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="4dp"
    >

    <TextView
        android:id="@+id/despedida"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:text="@string/despedidda"
        android:textAllCaps="true"
        android:textColor="@color/primary_text"
        android:textSize="16sp"
        android:textStyle="bold|italic" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:srcCompat="@drawable/pig5"
        android:layout_marginTop="4dp"
        />

    <Button
        android:id="@+id/btnQuedarse"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:elevation="16dp"
        android:fontFamily="sans-serif"
        android:onClick="quedarse"
        android:text="@string/btnquedarse"
        android:textAlignment="center"
        android:textSize="14sp"
        android:textStyle="bold|italic"
        android:layout_marginTop="8dp"
        />

    <Button
        android:id="@+id/btnIrse"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:elevation="16dp"
        android:onClick="salir"
        android:text="@string/salir"
        android:textAllCaps="false"
        android:textSize="14sp"
        android:textStyle="italic"
        android:layout_marginTop="4dp"
        />
</LinearLayout>